--- a/style.css
+++ b/style.css
@@ -553,24 +553,499 @@ video {
   --tw-backdrop-sepia:  ;
 }
 
+.absolute{
+  position: absolute;
+}
+
+.relative{
+  position: relative;
+}
+
+.top-0{
+  top: 0px;
+}
+
+.left-0{
+  left: 0px;
+}
+
+.top-\[-20px\]{
+  top: -20px;
+}
+
+.left-auto{
+  left: auto;
+}
+
+.top-\[-30px\]{
+  top: -30px;
+}
+
+.top-\[-25px\]{
+  top: -25px;
+}
+
+.z-10{
+  z-index: 10;
+}
+
+.order-1{
+  order: 1;
+}
+
+.order-3{
+  order: 3;
+}
+
+.order-2{
+  order: 2;
+}
+
+.my-4{
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+
+.my-6{
+  margin-top: 1.5rem;
+  margin-bottom: 1.5rem;
+}
+
+.mb-6{
+  margin-bottom: 1.5rem;
+}
+
+.flex{
+  display: flex;
+}
+
+.grid{
+  display: grid;
+}
+
+.hidden{
+  display: none;
+}
+
+.h-56{
+  height: 14rem;
+}
+
+.h-5{
+  height: 1.25rem;
+}
+
+.h-4{
+  height: 1rem;
+}
+
+.min-h-screen{
+  min-height: 100vh;
+}
+
+.min-h-min{
+  min-height: -webkit-min-content;
+  min-height: -moz-min-content;
+  min-height: min-content;
+}
+
+.w-8{
+  width: 2rem;
+}
+
+.w-4\/5{
+  width: 80%;
+}
+
+.w-10{
+  width: 2.5rem;
+}
+
+.max-w-xs{
+  max-width: 20rem;
+}
+
+.flex-col{
+  flex-direction: column;
+}
+
+.place-content-center{
+  place-content: center;
+}
+
+.items-end{
+  align-items: flex-end;
+}
+
+.items-center{
+  align-items: center;
+}
+
+.justify-center{
+  justify-content: center;
+}
+
+.justify-between{
+  justify-content: space-between;
+}
+
+.justify-around{
+  justify-content: space-around;
+}
+
+.gap-4{
+  gap: 1rem;
+}
+
+.gap-2{
+  gap: 0.5rem;
+}
+
+.gap-20{
+  gap: 5rem;
+}
+
+.gap-1{
+  gap: 0.25rem;
+}
+
+.gap-10{
+  gap: 2.5rem;
+}
+
+.self-center{
+  align-self: center;
+}
+
+.justify-self-center{
+  justify-self: center;
+}
+
+.rounded-xl{
+  border-radius: 0.75rem;
+}
+
+.rounded-sm{
+  border-radius: 0.125rem;
+}
+
+.border-2{
+  border-width: 2px;
+}
+
+.border{
+  border-width: 1px;
+}
+
+.border-green-300{
+  --tw-border-opacity: 1;
+  border-color: rgb(134 239 172 / var(--tw-border-opacity));
+}
+
+.bg-neutral-cream{
+  --tw-bg-opacity: 1;
+  background-color: hsl(27 66% 92% / var(--tw-bg-opacity));
+}
+
+.bg-primary-red{
+  --tw-bg-opacity: 1;
+  background-color: hsl(10 79% 65% / var(--tw-bg-opacity));
+}
+
+.bg-neutral-pale-orange{
+  --tw-bg-opacity: 1;
+  background-color: hsl(33 100% 98% / var(--tw-bg-opacity));
+}
+
+.bg-primary-cyan{
+  --tw-bg-opacity: 1;
+  background-color: hsl(186 34% 60% / var(--tw-bg-opacity));
+}
+
+.p-4{
+  padding: 1rem;
+}
+
+.p-2{
+  padding: 0.5rem;
+}
+
+.p-1{
+  padding: 0.25rem;
+}
+
+.text-center{
+  text-align: center;
+}
+
+.text-right{
+  text-align: right;
+}
+
+.align-middle{
+  vertical-align: middle;
+}
+
 .font-dmsans{
   font-family: DM Sans, sans-serif;
 }
 
-.font-sans{
-  font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+.text-2xl{
+  font-size: 1.5rem;
+  line-height: 2rem;
 }
 
-.font-serif{
-  font-family: ui-serif, Georgia, Cambria, "Times New Roman", Times, serif;
+.text-xl{
+  font-size: 1.25rem;
+  line-height: 1.75rem;
 }
 
-.text-red-600{
+.text-sm{
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+}
+
+.text-xs{
+  font-size: 0.75rem;
+  line-height: 1rem;
+}
+
+.font-bold{
+  font-weight: 700;
+}
+
+.text-neutral-cream{
   --tw-text-opacity: 1;
-  color: rgb(220 38 38 / var(--tw-text-opacity));
+  color: hsl(27 66% 92% / var(--tw-text-opacity));
 }
 
-.text-primary-cyan{
+.text-neutral-medium-brown{
   --tw-text-opacity: 1;
-  color: hsl(186 34% 60% / var(--tw-text-opacity));
+  color: hsl(28 10% 53% / var(--tw-text-opacity));
+}
+
+.text-red-500{
+  --tw-text-opacity: 1;
+  color: rgb(239 68 68 / var(--tw-text-opacity));
+}
+
+.text-white{
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.hover\:absolute:hover{
+  position: absolute;
+}
+
+.hover\:left-0:hover{
+  left: 0px;
+}
+
+.hover\:top-\[-20px\]:hover{
+  top: -20px;
+}
+
+.hover\:z-10:hover{
+  z-index: 10;
+}
+
+.hover\:w-8:hover{
+  width: 2rem;
+}
+
+.hover\:cursor-pointer:hover{
+  cursor: pointer;
+}
+
+.hover\:rounded-sm:hover{
+  border-radius: 0.125rem;
+}
+
+.hover\:bg-black:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+}
+
+.hover\:text-center:hover{
+  text-align: center;
+}
+
+.hover\:text-xs:hover{
+  font-size: 0.75rem;
+  line-height: 1rem;
+}
+
+.hover\:text-white:hover{
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.hover\:after\:absolute:hover::after{
+  content: var(--tw-content);
+  position: absolute;
+}
+
+.hover\:after\:left-0:hover::after{
+  content: var(--tw-content);
+  left: 0px;
+}
+
+.hover\:after\:top-\[-20px\]:hover::after{
+  content: var(--tw-content);
+  top: -20px;
+}
+
+.hover\:after\:w-8:hover::after{
+  content: var(--tw-content);
+  width: 2rem;
+}
+
+.hover\:after\:rounded-sm:hover::after{
+  content: var(--tw-content);
+  border-radius: 0.125rem;
+}
+
+.hover\:after\:bg-black:hover::after{
+  content: var(--tw-content);
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+}
+
+.hover\:after\:text-center:hover::after{
+  content: var(--tw-content);
+  text-align: center;
+}
+
+.hover\:after\:text-xs:hover::after{
+  content: var(--tw-content);
+  font-size: 0.75rem;
+  line-height: 1rem;
+}
+
+.hover\:after\:text-white:hover::after{
+  content: var(--tw-content);
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.hover\:after\:content-\[\'123\'\]:hover::after{
+  --tw-content: '123';
+  content: var(--tw-content);
+}
+
+.hover\:after\:content-\[\'\$\{amount\}\'\]:hover::after{
+  --tw-content: '${amount}';
+  content: var(--tw-content);
+}
+
+.group:hover .group-hover\:absolute{
+  position: absolute;
+}
+
+.group:hover .group-hover\:top-\[-20px\]{
+  top: -20px;
+}
+
+.group:hover .group-hover\:left-0{
+  left: 0px;
+}
+
+.group:hover .group-hover\:z-10{
+  z-index: 10;
+}
+
+.group:hover .group-hover\:w-8{
+  width: 2rem;
+}
+
+.group:hover .group-hover\:rounded-sm{
+  border-radius: 0.125rem;
+}
+
+.group:hover .group-hover\:bg-black{
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+}
+
+.group:hover .group-hover\:text-center{
+  text-align: center;
+}
+
+.group:hover .group-hover\:text-xs{
+  font-size: 0.75rem;
+  line-height: 1rem;
+}
+
+.group:hover .group-hover\:text-white{
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.peer:hover ~ .peer-hover\:absolute{
+  position: absolute;
+}
+
+.peer:hover ~ .peer-hover\:left-0{
+  left: 0px;
+}
+
+.peer:hover ~ .peer-hover\:top-\[-20px\]{
+  top: -20px;
+}
+
+.peer:hover ~ .peer-hover\:z-10{
+  z-index: 10;
+}
+
+.peer:hover ~ .peer-hover\:h-4{
+  height: 1rem;
+}
+
+.peer:hover ~ .peer-hover\:w-8{
+  width: 2rem;
+}
+
+.peer:hover ~ .peer-hover\:w-min{
+  width: -webkit-min-content;
+  width: -moz-min-content;
+  width: min-content;
+}
+
+.peer:hover ~ .peer-hover\:rounded-sm{
+  border-radius: 0.125rem;
+}
+
+.peer:hover ~ .peer-hover\:bg-black{
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+}
+
+.peer:hover ~ .peer-hover\:text-center{
+  text-align: center;
+}
+
+.peer:hover ~ .peer-hover\:text-xs{
+  font-size: 0.75rem;
+  line-height: 1rem;
+}
+
+.peer:hover ~ .peer-hover\:text-white{
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.peer:hover ~ .peer-hover\:text-black{
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
+}
+
+@media (min-width: 1024px){
+  .lg\:max-w-lg{
+    max-width: 32rem;
+  }
+
+  .lg\:gap-36{
+    gap: 9rem;
+  }
 }
